<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.cmbb.smartkids.testmenglist.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/material_multiple"/>

    <Button
        android:id="@+id/btn_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_material"
        android:layout_centerHorizontal="true"
        android:text="@string/recycler_component"/>

    <Button
        android:id="@+id/btn_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_recycler"
        android:layout_centerHorizontal="true"
        android:text="@string/photo_picker"/>

    <Button
        android:id="@+id/btn_bsheets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_picker"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_sheets"/>

    <Button
        android:id="@+id/btn_palettle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_bsheets"
        android:layout_centerHorizontal="true"
        android:text="@string/palette_component"/>
    <Button
        android:id="@+id/btn_transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_palettle"
        android:layout_centerHorizontal="true"
        android:text="@string/transition_component"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/update_component"/>
</RelativeLayout>
